--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiniGames"
         tools:targetApi="31">
+
+
+
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="068fc944c7ac3ec54e1bdba39e4ecf3c"/>
+
+        <activity
+            android:name=".ui.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MiniGames.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
